// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders album cover for placeholder album 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 0.5rem;
}

<div
  id="test-render-container"
>
  <div
    class="mock-album-cover emotion-0"
  >
    Album: {"placeholder":true,"id":123}
    Size: 3rem
  </div>
</div>
`;

exports[`renders album cover with overlay buttons for named album 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 0.5rem;
}

<div
  id="test-render-container"
>
  <div
    class="mock-album-cover emotion-0"
  >
    Album: {"placeholder":false,"id":456,"name":"Test named album","url":"https://test.com"}
    Size: 3rem
    <div
      class="mock-rename-album-button"
    >
      ID: 456
    </div>
    <div
      class="mock-delete-album-button"
    >
      ID: 456
    </div>
  </div>
</div>
`;
